5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1575_1559.log
== TEST (2019-03-12 21:41:34) 
-- CODE:
frase = ""
print(.upper("ada lovelacce foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("ada lovelacce foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:42:14) 
-- CODE:
frase = ""
print(.upper("Ada Lovelacce foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelacce foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:42:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper("Ada Lovelacce foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelacce foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:42:44) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper("Ada Lovelacce foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.215744
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 2
    print(.upper("Ada Lovelacce foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:43:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:43:31) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
.upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    .upper("Ada Lovelace foi a primeira programadora da historia.")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:43:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
.upper("Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME:
0.130512
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 2
    .upper("Ada Lovelace foi a primeira programadora da historia.")
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:44:08) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
.upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    .upper("Ada Lovelace foi a primeira programadora da historia.")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:44:23) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(.upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia.")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:44:37) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:45:32) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(.upper("Ada Lovelace" foi a primeira programadora da historia.))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace" foi a primeira programadora da historia.))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:45:39) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(.upper("Ada Lovelace" foi a primeira programadora da historia.""))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace" foi a primeira programadora da historia.""))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:46:05) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(.upper("Ada Lovelace" foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace" foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:46:53) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(.upper("Ada Lovelace" foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace" foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:47:44) 
-- CODE:
frase = ("Ada Lovelace" foi a primeira programadora da historia.")
print(.upper("Ada Lovelace" foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace" foi a primeira programadora da historia.")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:47:54) 
-- CODE:
frase = ("Ada Lovelace" foi a primeira programadora da historia."))
print(.upper("Ada Lovelace" foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace" foi a primeira programadora da historia."))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:48:20) 
-- CODE:
frase = ("Ada Lovelace" foi a primeira programadora da historia.")
print(.upper("Ada Lovelace" foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace" foi a primeira programadora da historia.")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:49:09) 
-- CODE:
frase = ("Ada Lovelace" foi a primeira programadora da historia.")
print("Ada Lovelace".upper foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace" foi a primeira programadora da historia.")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:49:12) 
-- CODE:
frase = ("Ada Lovelace" foi a primeira programadora da historia.")
print("Ada Lovelace".upper foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.204666
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase = ("Ada Lovelace" foi a primeira programadora da historia.")
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:49:26) 
-- CODE:
frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
print("Ada Lovelace".upper foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:49:56) 
-- CODE:
frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
print("Ada Lovelace".upper foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:06:17) 
-- CODE:
frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
print("Ada Lovelace" foi a primeira programadora da historia..upper()")
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:06:37) 
-- CODE:
frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
print("Ada Lovelace" foi a primeira programadora da historia.".upper())
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:06:39) 
-- CODE:
frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
print("Ada Lovelace" foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.145933
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase = ("Ada Lovelace".upper foi a primeira programadora da historia.")
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:07:03) 
-- CODE:
frase = ("Ada Lovelace" foi a primeira programadora da historia.".upper())
print("Ada Lovelace" foi a primeira programadora da historia.".upper())
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace" foi a primeira programadora da historia.".upper())
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:07:04) 
-- CODE:
frase = ("Ada Lovelace" foi a primeira programadora da historia.".upper())
print("Ada Lovelace" foi a primeira programadora da historia.".upper())
-- ERROR:
File "XXXX", line 1
    frase = ("Ada Lovelace" foi a primeira programadora da historia.".upper())
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:07:06) 
-- CODE:
frase = ("Ada Lovelace" foi a primeira programadora da historia.".upper())
print("Ada Lovelace" foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.144485
-- ERROR:
  File "/home/codebench/codes/1575/1559/main.py", line 1
    frase = ("Ada Lovelace" foi a primeira programadora da historia.".upper())
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:07:33) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.".upper())
print("Ada Lovelace" foi a primeira programadora da historia.".upper())
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace" foi a primeira programadora da historia.".upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:07:40) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.".upper())
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:07:43) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.".upper())
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.205507
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
